Modified Swagger to match User endoint. Added 204 status code to some of the route responses.
